RichwoodNew/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>CommercientSF__Default_Warehouse__c</fullName>
        <label>Default Warehouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercientSF__ExternalKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalKey</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ItemAddlDescr__c</fullName>
        <label>ItemAddlDescr</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>Product_Category__c</referenceTo>
        <relationshipLabel>Products in this Category</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesCatDescr__c</fullName>
        <label>SalesCatDescr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>